--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -84,6 +84,16 @@ header .logo {
   background-color: #f6c70d;
 }
 
+.small.button{
+  background-color: #f6c705;
+  border-radius: 3px;
+}
+
+#quality-pool{
+  background-color: #f6c705;
+  border-radius: 3px;
+}
+
 
 // .results img.mail {
 //     display: inline-block;
